--- a/index.html
+++ b/index.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My CI/CD Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My First CI/CD Pipeline</title>
+  
+  <!-- Google Fonts for a modern look -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #f6d365, #fda085);
+      color: #333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+      animation: gradientShift 10s infinite alternate;
+    }
+
+    @keyframes gradientShift {
+      0% { background: linear-gradient(135deg, #f6d365, #fda085); }
+      50% { background: linear-gradient(135deg, #84fab0, #8fd3f4); }
+      100% { background: linear-gradient(135deg, #f6d365, #fda085); }
+    }
+
+    h1 {
+      font-size: 3em;
+      margin: 0.5em 0;
+      color: #fff;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin-bottom: 1em;
+      color: #fff;
+    }
+
+    .status {
+      display: inline-block;
+      padding: 0.5em 1.2em;
+      background: #333;
+      color: #fff;
+      border-radius: 25px;
+      font-weight: bold;
+      font-size: 1.2em;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+      50% { transform: scale(1.1); box-shadow: 0 6px 15px rgba(0,0,0,0.3); }
+      100% { transform: scale(1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+    }
+
+    p {
+      font-size: 1.1em;
+      max-width: 600px;
+      margin: 1em auto;
+      color: #fff;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 0.7em 1.5em;
+      margin-top: 2em;
+      background: #ff6b6b;
+      color: #fff;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.1em;
+      font-weight: bold;
+      text-decoration: none;
+      transition: transform 0.3s, background 0.3s;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .btn:hover {
+      transform: scale(1.1);
+      background: #f06595;
+    }
+
+    footer {
+      margin-top: 3em;
+      font-size: 0.9em;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, CI/CD World!</h1>
-  <p>This site is deployed automatically using GitHub Actions.</p>
+
+  <h1>🚀 My First CI/CD Pipeline!</h1>
+  <h2>Automated Deployment via GitHub Actions & GitHub Pages</h2>
+
+  <div class="status">✅ Build Success!</div>
+
+  <p>
+    This page demonstrates my first fully automated CI/CD pipeline. 
+    Every time I update my code in GitHub, it runs the workflow and deploys instantly. 
+    No local setup required—everything online and automated.
+  </p>
+
+  <a class="btn" href="https://github.com/YOUR_USERNAME/ci-cd-website" target="_blank">
+    View Repository
+  </a>
+
+  <footer>
+    Made with ❤️ using GitHub Actions & GitHub Pages
+  </footer>
+
 </body>
 </html>
